--- a/public/styles/sass/style.scss
+++ b/public/styles/sass/style.scss
@@ -43,3 +43,7 @@ a:hover {
 .btn-primary {
     background-color: $secondary-button-color;
 }
+
+.btn-danger {
+    background-color: $danger-button-color;
+}
